--- a/worldwise/package.json
+++ b/worldwise/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.0",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
